cards nella recently played fatte in tutte le media queries, spaziature generali nel main-content

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="header">header</div>
                 <div class="main-content p-inline-md p-block-md">
                     <nav class="main-nav d-flex content-center debug">
-                        <ul class="d-flex gap-md">
+                        <ul class="d-flex flex-wrap gap-md">
                             <li>ciao</li>
                             <li>ciao</li>
                             <li>ciao</li>
@@ -31,7 +31,9 @@
                     </nav>
                     <!-- Recently played -->
                      <section class="recents">
-                        <h2>Recently played</h2>
+                        <div class="category-title">
+                            <h2>Recently played</h2>
+                        </div>
                         <ul class="card-list d-flex flex-wrap gap-md debug">
                             <li class="card">
                                 <div>card</div>
