singola card fatta in tutte le media queries

--- a/index.html
+++ b/index.html
@@ -34,31 +34,28 @@
                         <div class="category-title">
                             <h2>Recently played</h2>
                         </div>
-                        <ul class="card-list d-flex flex-wrap gap-md debug">
+                        <ul class="card-list d-flex flex-wrap gap-sm text-center debug">
                             <li class="card">
-                                <div>card</div>
+                                <div class="card-image">
+                                    <img src="img/metal_lifting.jpg" alt="Heavy Metal">
+                                </div>
+                                <div class="card-title">
+                                    <h3 class="playlist-title">Heavy Metal</h3>
+                                    <h5>Subtitle</h5>
+                                </div>
                             </li>
                             <li class="card">
-                                <div>card</div>
+                                <div class="card-image">
+                                    <img src="img/stranger.jpeg" alt="stranger Things">
+                                </div>
+                                <div class="card-title">
+                                    <h3 class="playlist-title">
+                                        Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)
+                                    </h3>
+                                    <h5>Kyle Dixon & Michael Stein</h5>
+                                </div>
                             </li>
-                            <li class="card">
-                                <div>card</div>
-                            </li>
-                            <li class="card">
-                                <div>card</div>
-                            </li>
-                            <li class="card">
-                                <div>card</div>
-                            </li>
-                            <li class="card">
-                                <div>card</div>
-                            </li>
-                            <li class="card">
-                                <div>card</div>
-                            </li>
-                            <li class="card">
-                                <div>card</div>
-                            </li>
+                            
                         </ul>
                      </section>
                      <!-- Suggestions -->
