--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fake Spotify</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
@@ -30,38 +33,45 @@
                         </ul>
                     </nav>
                     <!-- Recently played -->
-                     <section class="recents">
+                    <section class="recents">
                         <div class="category-title">
                             <h2>Recently played</h2>
                         </div>
                         <ul class="card-list d-flex flex-wrap gap-sm text-center debug">
                             <li class="card">
-                                <div class="card-image">
-                                    <img src="img/metal_lifting.jpg" alt="Heavy Metal">
-                                </div>
-                                <div class="card-title">
-                                    <h3 class="playlist-title">Heavy Metal</h3>
-                                    <h5>Subtitle</h5>
-                                </div>
+                                <a href="#">
+                                    <div class="card-image">
+                                        <img src="img/metal_lifting.jpg" alt="Heavy Metal">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                    <div class="card-title">
+                                        <h3 class="playlist-title">Heavy Metal</h3>
+                                        <h5>Subtitle</h5>
+                                    </div>
+                                </a>
                             </li>
                             <li class="card">
-                                <div class="card-image">
-                                    <img src="img/stranger.jpeg" alt="stranger Things">
-                                </div>
-                                <div class="card-title">
-                                    <h3 class="playlist-title">
-                                        Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)
-                                    </h3>
-                                    <h5>Kyle Dixon & Michael Stein</h5>
-                                </div>
+                                <a href="#">
+                                    <div class="card-image">
+                                        <img src="img/stranger.jpeg" alt="stranger Things">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    
+                                    </div>
+                                    <div class="card-title">
+                                        <h3 class="playlist-title">
+                                            Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)
+                                        </h3>
+                                        <h5>Kyle Dixon & Michael Stein</h5>
+                                    </div>
+                                </a>
                             </li>
-                            
+
                         </ul>
-                     </section>
-                     <!-- Suggestions -->
-                     <section class="suggestions"></section>
-                     <!-- Popular artists -->
-                     <section class="populars"></section>
+                    </section>
+                    <!-- Suggestions -->
+                    <section class="suggestions"></section>
+                    <!-- Popular artists -->
+                    <section class="populars"></section>
                 </div>
             </main>
         </div>
