section recenty played completata all medias

--- a/index.html
+++ b/index.html
@@ -65,6 +65,55 @@
                                     </div>
                                 </a>
                             </li>
+                            <li class="card">
+                                <a href="#">
+                                    <div class="card-image">
+                                        <img src="img/aquietplace.jpeg" alt="A quiet place">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                    <div class="card-title">
+                                        <h3 class="playlist-title">A quiet place</h3>
+                                        <h5>Subtitle</h5>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="card">
+                                <a href="#">
+                                    <div class="card-image">
+                                        <img src="img/split.jpeg" alt="Split">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                    <div class="card-title">
+                                        <h3 class="playlist-title">Split</h3>
+                                        <h5>Subtitle</h5>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="card">
+                                <a href="#">
+                                    <div class="card-image">
+                                        <img src="img/cure.jpeg" alt="A cure for wellness">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                    <div class="card-title">
+                                        <h3 class="playlist-title">A cure for wellness</h3>
+                                        <h5>Subtitle</h5>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="card">
+                                <a href="#">
+                                    <div class="card-image">
+                                        <img src="img/sinister.jpeg" alt="Sinister">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                    <div class="card-title">
+                                        <h3 class="playlist-title">Sinister</h3>
+                                        <h5>Subtitle</h5>
+                                    </div>
+                                </a>
+                            </li>
+                            
 
                         </ul>
                     </section>
