section suggestions completata

--- a/index.html
+++ b/index.html
@@ -113,12 +113,39 @@
                                     </div>
                                 </a>
                             </li>
-                            
-
                         </ul>
                     </section>
                     <!-- Suggestions -->
-                    <section class="suggestions"></section>
+                    <section class="suggestions">
+                        <div class="category-title">
+                            <h2>Creato per John Doe</h2>
+                            <h5>Più ascolti, più accurati saranno i suggerimenti</h5>
+                        </div>
+                        <ul class="card-list d-flex flex-wrap gap-sm text-center debug">
+                            <li class="card">
+                                <a href="#">
+                                    <div class="card-image">
+                                        <img src="img/radar.jpeg" alt="Release Radar">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                    <div class="card-title">
+                                        <h3 class="playlist-title">Release Radar</h3>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="card">
+                                <a href="#">
+                                    <div class="card-image">
+                                        <img src="img/mixdaily.jpeg" alt="Daily Mix 1">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                    <div class="card-title">
+                                        <h3 class="playlist-title">Daily Mix 1</h3>
+                                    </div>
+                                </a>
+                            </li>
+                        </ul>
+                    </section>
                     <!-- Popular artists -->
                     <section class="populars"></section>
                 </div>
