hover sulla main-content navbar completata, ridimensionamento font-size in main nelle queries

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
             <main>
                 <div class="header">header</div>
                 <div class="main-content p-inline-md p-block-md">
-                    <nav class="main-nav d-flex content-center debug">
-                        <ul class="d-flex flex-wrap gap-md">
-                            <li>ciao</li>
-                            <li>ciao</li>
-                            <li>ciao</li>
-                            <li>ciao</li>
-                            <li>ciao</li>
-                            <li>ciao</li>
+                    <nav class="main-nav d-flex content-center uppercase">
+                        <ul class="d-flex flex-wrap content-center">
+                            <li><a href="#">in evidenza</a></li>
+                            <li><a href="#">podcast</a></li>
+                            <li><a href="#">classifiche</a></li>
+                            <li><a href="#">generi e mood</a></li>
+                            <li><a href="#">nuove uscite</a></li>
+                            <li><a href="#">scopri</a></li>
                         </ul>
                     </nav>
                     <!-- Recently played -->
@@ -37,7 +37,7 @@
                         <div class="category-title">
                             <h2>Recently played</h2>
                         </div>
-                        <ul class="card-list d-flex flex-wrap gap-sm text-center debug">
+                        <ul class="card-list d-flex flex-wrap gap-sm text-center">
                             <li class="card">
                                 <a href="#">
                                     <div class="card-image">
@@ -121,7 +121,7 @@
                             <h2>Creato per John Doe</h2>
                             <h5>Più ascolti, più accurati saranno i suggerimenti</h5>
                         </div>
-                        <ul class="card-list d-flex flex-wrap gap-sm text-center debug">
+                        <ul class="card-list d-flex flex-wrap gap-sm text-center">
                             <li class="card">
                                 <a href="#">
                                     <div class="card-image">
@@ -147,7 +147,36 @@
                         </ul>
                     </section>
                     <!-- Popular artists -->
-                    <section class="populars"></section>
+                    <section class="populars">
+                        <div class="category-title">
+                            <h2>Artisti più popolari</h2>
+                            <h5>Più ascolti, più accurati saranno i suggerimenti</h5>
+                        </div>
+                        <ul class="card-list d-flex flex-wrap gap-sm text-center">
+                            <li class="card">
+                                <a href="#">
+                                    <div class="card-image">
+                                        <img src="img/youg.jpeg" alt="Lana del Rey">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                    <div class="card-title">
+                                        <h3 class="playlist-title">Lana del Rey</h3>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="card">
+                                <a href="#">
+                                    <div class="card-image">
+                                        <img src="img/einaudi.jpeg" alt="Ludovico Einaudi">
+                                        <i class="fa-regular fa-circle-play"></i>
+                                    </div>
+                                    <div class="card-title">
+                                        <h3 class="playlist-title">Ludovico Einaudi</h3>
+                                    </div>
+                                </a>
+                            </li>
+                        </ul>
+                    </section>
                 </div>
             </main>
         </div>
