bottone header completato con hover e ridimensionamento

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <div class="upper-content d-flex">
             <div id="sidebar" class="p-inline-md">sidebar</div>
             <main>
-                <div class="header">header</div>
+                <div class="header">
+                    <button class="btn uppercase">effettua l'upgrade</button>
+                </div>
                 <div class="main-content p-inline-md p-block-md">
                     <nav class="main-nav d-flex content-center uppercase">
                         <ul class="d-flex flex-wrap content-center">
