--- a/index.html
+++ b/index.html
@@ -18,7 +18,44 @@
 <body>
     <div class="wrapper d-flex flex-col">
         <div class="upper-content d-flex">
-            <div id="sidebar" class="p-inline-md">sidebar</div>
+            <div id="sidebar" class="p-inline-sm text-smaller">
+                <div class="logo">
+                    <img src="img/logo.svg" alt="logo">
+                </div>
+                <nav class="sidebar-nav">
+                    <ul>
+                        <li class="text-light">
+                            <div class="image"><img src="img/home.svg" alt="home"></div>
+                            <span>Home</span>
+                        </li>
+                        <li>
+                            <div class="image"><img src="img/search.svg" alt="search"></div>
+                            <span>Cerca</span>
+                        </li>
+                        <li>
+                            <div class="image"><img src="img/libreria.svg" alt="libreria"></div>
+                            <span>La tua libreria</span>
+                        </li>
+                    </ul>
+                </nav>
+                <section class="playlist">
+                    <h5 class="uppercase text-light text-sm">playlist</h5>
+                    <div>
+                        <!-- icon -->
+                        <span class="text-sm">Crea playlist</span>
+                    </div>
+                    <ul>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                    </ul>
+                    <div class="profile"></div>
+                </section>
+            </div>
             <main>
                 <div class="header">
                     <button class="btn uppercase">effettua l'upgrade</button>
@@ -57,7 +94,7 @@
                                     <div class="card-image">
                                         <img src="img/stranger.jpeg" alt="stranger Things">
                                         <i class="fa-regular fa-circle-play"></i>
-                                    
+
                                     </div>
                                     <div class="card-title">
                                         <h3 class="playlist-title">
