sidebar section playlist completata

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="wrapper d-flex flex-col">
         <div class="upper-content d-flex">
-            <div id="sidebar" class="p-inline-sm text-smaller">
+            <div id="sidebar" class="p-inline-sm text-smaller d-flex flex-col gap-sm">
                 <div class="logo">
                     <img src="img/logo.svg" alt="logo">
                 </div>
@@ -40,9 +40,9 @@
                 </nav>
                 <section class="playlist">
                     <h5 class="uppercase text-light text-sm">playlist</h5>
-                    <div>
-                        <!-- icon -->
-                        <span class="text-sm">Crea playlist</span>
+                    <div class="d-flex items-center gap-sm text-sm">
+                        <i class="fa-solid fa-square-plus crea"></i>
+                        <span>Crea playlist</span>
                     </div>
                     <ul>
                         <li>Nome Playlist</li>
@@ -53,8 +53,8 @@
                         <li>Nome Playlist</li>
                         <li>Nome Playlist</li>
                     </ul>
-                    <div class="profile"></div>
                 </section>
+                <div class="profile"></div>
             </div>
             <main>
                 <div class="header">
