sidebar completata (no mobile ver)

--- a/index.html
+++ b/index.html
@@ -54,7 +54,15 @@
                         <li>Nome Playlist</li>
                     </ul>
                 </section>
-                <div class="profile"></div>
+                <div class="profile-content">
+                    <div class="text-semibold d-flex gap-xs items-center  install">Installa app</div>
+                    <div class="profile d-flex gap-sm items-center text-sm text-light text-bold">
+                        <div class="image">
+                            <img src="img/profile.svg" alt="profile">
+                        </div>
+                        <span>John Doe</span>
+                    </div>
+                </div>
             </div>
             <main>
                 <div class="header">
