--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </section>
                 <div class="profile-content">
                     <div class="text-semibold d-flex gap-xs items-center  install">Installa app</div>
-                    <div class="profile d-flex gap-sm items-center text-sm text-light text-bold">
+                    <div class="profile pointer d-flex gap-sm items-center text-sm text-light text-bold">
                         <div class="image">
                             <img src="img/profile.svg" alt="profile">
                         </div>
