--- a/index.html
+++ b/index.html
@@ -234,7 +234,17 @@
                 </div>
             </main>
         </div>
-        <footer class="p-inline-sm p-block-sm">footer</footer>
+        <footer class="d-flex content-between p-inline-sm p-block-sm">
+            <div class="left">left</div>
+            <div class="center d-flex content-center">
+                <audio controls>
+                    <source src="horse.ogg" type="audio/ogg">
+                    <source src="horse.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                  </audio>
+            </div>
+            <div class="right">right</div>
+        </footer>
     </div>
 </body>
 
