disegnato tutto audio control ( no tag audio solo css)

--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
                 </div>
             </main>
         </div>
-        <footer class="d-flex content-between p-inline-sm p-block-sm">
+        <footer class="d-flex content-between p-inline-sm p-block-sm text-smaller">
             <div class="left">left</div>
-            <div class="center d-flex flex-col items-center">
+            <div class="center d-flex flex-col items-center text-light">
                 <div class="controls d-flex items-center">
                     <i class="fa-solid fa-shuffle"></i>
                     <i class="fa-solid fa-backward-step"></i>
@@ -244,7 +244,7 @@
                     <i class="fa-solid fa-forward-step"></i>
                     <i class="fa-solid fa-rotate-right"></i>
                 </div>
-                <div class="timebar">
+                <div class="timebar d-flex content-between items-center debug">
                     <span>0.25</span>
                     <div></div>
                     <span>4:35</span>
