div right footer completato ( esercizio quasi completato )

--- a/index.html
+++ b/index.html
@@ -260,11 +260,16 @@
                 </div>
                 <div class="timebar d-flex content-center gap-xs items-center">
                     <span>0.25</span>
-                    <div></div>
+                    <div class="bar"></div>
                     <span>4:35</span>
                 </div>
             </div>
-            <div class="right">right</div>
+            <div class="right d-flex flex-row-reverse gap-sm items-center">
+                <div class="bar"></div>
+                <i class="fa-solid fa-volume-low"></i>
+                <i class="fa-solid fa-display"></i>
+                <i class="fa-solid fa-list-ul"></i>
+            </div>
         </footer>
     </div>
 </body>
