ridimensionati icone right footer. PROGETTO COMPLETATO (in seguito revisioni) PS: la barra di scorrimento lho inclusa solamente nel main-content e non anche nell'header come da mockup, perche nel sito originale, la barra si trova solo nel main-content)

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <li>Nome Playlist</li>
                     </ul>
                 </section>
-                <div class="profile-content">
+                <div class="profile-content d-flex flex-col">
                     <div class="install text-semibold d-flex gap-xs items-center">
                         <div class="image">
                             <img src="img/download.svg" alt="download">
@@ -264,11 +264,13 @@
                     <span>4:35</span>
                 </div>
             </div>
-            <div class="right d-flex flex-row-reverse gap-sm items-center">
+            <div class="right d-flex flex-row-reverse gap-xs items-center">
                 <div class="bar"></div>
-                <i class="fa-solid fa-volume-low"></i>
-                <i class="fa-solid fa-display"></i>
-                <i class="fa-solid fa-list-ul"></i>
+                <div class="d-flex gap-sm flex-wrap flex-row-reverse">
+                    <i class="fa-solid fa-volume-low"></i>
+                    <i class="fa-solid fa-display"></i>
+                    <i class="fa-solid fa-list-ul"></i>
+                </div>
             </div>
         </footer>
     </div>
