sistemati dimensioni elementi sidebar, pulito codice html e css in sidebar, aggiunta un altezza fissata alla lista di playlist e un overflow auto. css in generale piu pulito e commentato

--- a/index.html
+++ b/index.html
@@ -18,44 +18,51 @@
 <body>
     <div class="wrapper d-flex flex-col">
         <div class="upper-content d-flex">
-            <div id="sidebar" class="p-inline-sm text-smaller d-flex flex-col gap-sm">
-                <div class="logo">
+            <div id="sidebar" class="p-inline-sm text-smaller d-flex flex-col gap-md">
+                <div class="logo debug">
                     <img class="logo-big visibility" src="img/logo.svg" alt="logo">
                     <img class="logo-small" src="img/logo-small.svg" alt="logo small">
                 </div>
-                <nav class="sidebar-nav">
-                    <ul>
-                        <li class="text-light">
-                            <div class="image"><img src="img/home.svg" alt="home"></div>
-                            <span class="visibility">Home</span>
-                        </li>
-                        <li>
-                            <div class="image"><img src="img/search.svg" alt="search"></div>
-                            <span class="visibility">Cerca</span>
-                        </li>
-                        <li>
-                            <div class="image"><img src="img/libreria.svg" alt="libreria"></div>
-                            <span class="visibility">La tua libreria</span>
-                        </li>
-                    </ul>
-                </nav>
+                <ul class="sidebar-nav d-flex flex-col gap-sm debug">
+                    <li class="text-light">
+                        <div class="image"><img src="img/home.svg" alt="home"></div>
+                        <span class="visibility">Home</span>
+                    </li>
+                    <li>
+                        <div class="image"><img src="img/search.svg" alt="search"></div>
+                        <span class="visibility">Cerca</span>
+                    </li>
+                    <li>
+                        <div class="image"><img src="img/libreria.svg" alt="libreria"></div>
+                        <span class="visibility">La tua libreria</span>
+                    </li>
+                </ul>
                 <section class="playlist visibility">
-                    <h5 class="uppercase text-light text-sm">playlist</h5>
-                    <div class="d-flex items-center gap-sm text-sm">
-                        <i class="fa-solid fa-square-plus crea"></i>
-                        <span>Crea playlist</span>
+                    <div>
+                        <h5 class="uppercase text-light text-sm">playlist</h5>
+                        <div class="d-flex items-center p-block-xs gap-sm text-sm">
+                            <i class="fa-solid fa-square-plus crea"></i>
+                            <span>Crea playlist</span>
+                        </div>
                     </div>
                     <ul>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
+                        <li>Nome Playlist1</li>
+                        <li>Nome Playlist2</li>
+                        <li>Nome Playlist3</li>
+                        <li>Nome Playlist4</li>
+                        <li>Nome Playlist5</li>
+                        <li>Nome Playlist6</li>
+                        <li>Nome Playlist7</li>
+                        <li>Nome Playlist8</li>
+                        <li>Nome Playlist9</li>
+                        <li>Nome Playlist10</li>
+                        <li>Nome Playlist11</li>
+                        <li>Nome Playlist12</li>
+                        <li>Nome Playlist13</li>
+                        <li>Nome Playlist14</li>
                     </ul>
                 </section>
-                <div class="profile-content d-flex flex-col">
+                <div class="profile-content d-flex flex-col gap-sm">
                     <div class="install text-semibold d-flex gap-xs items-center">
                         <div class="image">
                             <img src="img/download.svg" alt="download">
