simulato il click su un elemento usando qualche trick con input radio e :checked -> la navbar del main content è cliccabile

--- a/index.html
+++ b/index.html
@@ -88,12 +88,43 @@
                 <div class="main-content p-inline-md p-block-md">
                     <nav class="main-nav d-flex content-center uppercase">
                         <ul class="d-flex flex-wrap content-center">
-                            <li><a href="#">in evidenza</a></li>
-                            <li><a href="#">podcast</a></li>
-                            <li><a href="#">classifiche</a></li>
-                            <li><a href="#">generi e mood</a></li>
-                            <li><a href="#">nuove uscite</a></li>
-                            <li><a href="#">scopri</a></li>
+                            <li>
+                                <input type="radio" name="nav" id="evidenza" value="evidenza">
+                                <a href="">
+                                    <label for="evidenza">evidenza</label>
+                                </a>
+                                
+                            </li>
+                            <li>
+                                <input type="radio" name="nav" id="podcast" value="podcast">
+                                <a href="">
+                                    <label for="podcast">podcast</label>
+                                </a>
+                            </li>
+                            <li>
+                                <input type="radio" name="nav" id="classifiche" value="classifiche">
+                                <a href="">
+                                    <label for="classifiche">classifiche</label>
+                                </a>
+                            </li>
+                            <li>
+                                <input type="radio" name="nav" id="generi" value="generi">
+                                <a href="">
+                                    <label for="generi">generi e mood</label>
+                                </a>
+                            </li>
+                            <li>
+                                <input type="radio" name="nav" id="uscite" value="uscite">
+                                <a href="">
+                                    <label for="uscite">nuove uscite</label>
+                                </a>
+                            </li>
+                            <li>
+                                <input type="radio" name="nav" id="scopri" value="scopri">
+                                <a href="">
+                                    <label for="scopri">scopri</label>
+                                </a>
+                            </li>
                         </ul>
                     </nav>
                     <!-- Recently played -->
